--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    archiveFileName = 'stock-service.jar'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
